[tool.poetry]
name = "wow-money-maker-calculator"
version = "0.2.0"
description = "This program is a calculator that helps WoW AH scrubs make money."
authors = ["Rob Kramlich"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
